<resources>
    <string name="app_name">Appname</string>
    <string name="title_loan">Loan</string>
    <string name="title_repayment">Repayment</string>
    <string name="title_profile">Profile</string>
    <string name="maximum_loan_amount_upto">Maximum Loan Amount Upto</string>
    <string name="u20b9_20000">₹ 20000</string>
    <string name="apply">Apply</string>
    <string name="submit_info">Submit info</string>
    <string name="get_money">Get Money</string>
    <string name="get_credit">Get Credit</string>
</resources>