<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_loan">

    <fragment
        android:id="@+id/navigation_loan"
        android:name="com.sabya.myapplication.ui.loan.LoanFragment"
        android:label="@string/title_loan"
        tools:layout="@layout/fragment_loan" />

    <fragment
        android:id="@+id/navigation_repayment"
        android:name="com.sabya.myapplication.ui.repayment.RepaymentFragment"
        android:label="@string/title_repayment"
        tools:layout="@layout/fragment_repayment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.sabya.myapplication.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>